<resources>
    <string name="app_name">My Note</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home_title">Home</string>
    <string name="menu_label">Label</string>
    <string name="menu_edit_label">Edit Label</string>
    <string name="add_note_content_description">Add Note</string>
    <string name="menu_drawer_add_label_title">Add Label</string>
    <string name="menu_label_container_title">Label</string>
    <string name="menu_option_note_type_layout">Change Note Layout</string>
    <string name="edit_label_create_new_label">Create new label</string>
    <string name="nav_edit_note_label"> </string>
    <string name="edit_note_menu_add_reminder_label">add reminder</string>
    <string name="edit_note_menu_add_picture_label">add picture</string>
    <string name="edit_note_menu_delete_label">delete note</string>
</resources>