<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_outline_sticky_note_2_24"
            android:title="@string/menu_home_title" />
    </group>
    <group
        android:id="@+id/menu_second_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_label_container"
            android:title="@string/menu_label_container_title">
            <menu>
                <group
                    android:id="@+id/submenu_label_container"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/subnav_label_edit"
                        android:icon="@drawable/ic_baseline_add_24"
                        android:title="@string/menu_drawer_add_label_title" />
                </group>
            </menu>
        </item>
    </group>
</menu>